--- a/style.css
+++ b/style.css
@@ -1,4 +1,16 @@
+header {
+    display: flex;
+    justify-content: center;
+}
+
+main {
+    display: flex;
+    justify-content: center;
+}
+
 #grid {
+    display: flex;
+    justify-content: center;
     width: 500px;
     height: 500px;
     border: 10px double #000;
