--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+    background-color: beige;
+}
+
 header {
     display: flex;
     justify-content: center;
@@ -13,7 +17,7 @@ main {
     justify-content: center;
     width: 500px;
     height: 500px;
-    border: 10px double #000;
+    box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
 }
 
 .row {
@@ -24,7 +28,6 @@ main {
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
-    border: 1px solid #f00;
     background-color: #fff;
 }
 
