--- a/style.css
+++ b/style.css
@@ -12,6 +12,12 @@ main {
     justify-content: center;
 }
 
+#options {
+    width: 200px;
+    background-color: #639617;
+    margin: 0 25px 0 0;
+}
+
 #grid {
     display: flex;
     justify-content: center;
