--- a/style.css
+++ b/style.css
@@ -19,7 +19,21 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-around;
 }
+
+#colorpicker {
+    width: 50px;
+    height: 50px;
+}
+
+.slidercontainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
 
 #grid {
     display: flex;
