--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ header {
     justify-content: center;
 }
 
+header h1 {
+    font-size: 48px;
+}
+
 main {
     display: flex;
     justify-content: center;
@@ -176,4 +180,18 @@ input[type=range] {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     background-color: #fff;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+}
+
+a {
+    color: #c4b2c7;
+}
+
+a:hover {
+    color: #9960a1;
 }
